[project]
name = "deepstream-yolo"
version = "1.2.0"
description = "Compiles ultralytics models to run on deepstream"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "torch<2.6.0",
    "dill",
    "onnx",
    "onnxslim",
    "onnxruntime",
    "onnxscript",
    "ultralytics",
]
